# vup

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  vite.config.js
.claude/commands/: commit.md
.github/workflows/: ci.yml  claude.yml
.husky/: pre-commit
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/test/: main.test.js  setup.js
