[package]
name = "vup"
version = "0.1.0"
description = "A Tauri App"
authors = ["umaidashi"]
license = ""
repository = "https://github.com/umaidashi/vup"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]